@@ -90,10 +90,9 @@ HISTORY
          __INT_MAX__, __INT_MIN__, __FLOAT_MIN__, __FLOAT_MAX__,
         __CATCH_EVAL_COST__, __MASTER_EVAL_COST__, __RESET_TIME__,
         __CLEANUP_TIME__, __DRIVER_LOG__, and __WIZLIST__.
-    3.2.10 added __MSDOS_FS__.
+    3.2.10 added __MSDOS_FS__ and __FILENAME_SPACES__.
     3.3 made __LPC_NOSAVE__ always defined and added __ALISTS__,
-        __LPC_STRUCTS__, __LPC_INLINE_CLOSURES__, __FILENAME_SPACES__
-        and __PCRE__.
+        __LPC_STRUCTS__, __LPC_INLINE_CLOSURES__ and __PCRE__.
 
 SEE ALSO
     pragma(LPC), preprocessor(LPC)
