@@ -53,13 +53,13 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 424)
-(Parent-Version lpmud 3-3 423)
-(Version-Log "New commandline option '--filename-spaces'.
-Shared variable closures were saved without the '<num>=' header.")
+(Project-Version lpmud 3-3 425)
+(Parent-Version lpmud 3-3 424)
+(Version-Log "Made various corrections to the data cleanup code, among other things fixing a crasher (memory freed twice).
+Removed a memory leak in find_call_out()/remove_call_out().")
 (New-Version-Log
 "")
-(Checkin-Time "Mon, 17 Mar 2003 12:29:24 -0700")
+(Checkin-Time "Mon, 17 Mar 2003 23:07:13 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -96,8 +96,8 @@ Shared variable closures were saved without the '<num>=' header.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.59 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.487 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.309 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.488 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.310 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -157,12 +157,12 @@ Shared variable closures were saved without the '<num>=' header.")
   (src/array.h (lpmud/f/47_array.h 1.18.1.21 644))
   (src/array.c (lpmud/d/12_array.c 1.46.1.47.1.4 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.7 644))
-  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.26 644))
+  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.27 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
   (src/bitstrings.c (lpmud/i/48_bitstrings 1.14 644))
   (src/bytecode.h (lpmud/a/b/26_bytecode.h 1.1.1.2 644))
   (src/call_out.h (lpmud/f/45_call_out.h 1.7.1.6 644))
-  (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.25 644))
+  (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.26 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.16 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.12 644))
   (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.48 644))
@@ -179,7 +179,7 @@ Shared variable closures were saved without the '<num>=' header.")
   (src/files.c (lpmud/i/50_files.c 1.20 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.15 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.102 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.103 644))
   (src/hash.h (lpmud/f/32_hash.h 1.6 644))
   (src/hash.c (lpmud/c/28_hash.c 1.16 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.5 644))
@@ -192,7 +192,7 @@ Shared variable closures were saved without the '<num>=' header.")
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.14 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.38 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.18 644))
-  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.64 644))
+  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.65 644))
   (src/md5.h (lpmud/l/18_md5.h 1.2 644))
   (src/md5.c (lpmud/l/19_md5.c 1.6 644))
   (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.8 644))
@@ -975,10 +975,10 @@ Shared variable closures were saved without the '<num>=' header.")
   (doc/driver/debugmalloc (lpmud/n/42_debugmallo 1.3 644))
   (doc/driver/driver (lpmud/n/43_driver 1.2 644))
   (doc/driver/dumpallobj (lpmud/n/44_dumpallobj 1.6 644))
-  (doc/driver/invocation (lpmud/f/38_invocation 1.14.1.14 644))
+  (doc/driver/invocation (lpmud/f/38_invocation 1.14.1.15 644))
   (doc/driver/malloc (lpmud/n/45_malloc 1.3 644))
   (doc/driver/opcdump (lpmud/n/46_opcdump 1.3 644))
-  (doc/driver/predefined (lpmud/h/8_predefined 1.12.1.17 644))
+  (doc/driver/predefined (lpmud/h/8_predefined 1.12.1.18 644))
   (doc/driver/showsmallnewmalloced (lpmud/n/47_showsmalln 1.5 644))
   (doc/driver/status (lpmud/n/48_status 1.3 644))
 
